--- a/src/projects/ReactRouterExample/MoviesWeb/css/Loader.css
+++ b/src/projects/ReactRouterExample/MoviesWeb/css/Loader.css
@@ -1,86 +1,72 @@
-
-.center-body {
+/* From Uiverse.io by alexruix */
+.container-loader{
+    width: 100%;
+    height: 50vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    
+}
+.loader {
+    width: 48px;
+    height: 48px;
+    margin: auto;
+    position: relative;
+}
+
+.loader:before {
+    content: '';
+    width: 48px;
+    height: 5px;
+    background: #8082f050;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    border-radius: 50%;
+    animation: shadow324 0.5s linear infinite;
+}
+
+.loader:after {
+    content: '';
     width: 100%;
     height: 100%;
-    background: #262626;
-}
-
-.loader-circle-9 {
+    background: #20204e;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 70px;
-    height: 70px;
-    background: transparent;
-    border: 3px solid #3c3c3c;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 70px;
-    font-family: sans-serif;
-    font-size: 12px;
-    color: #00eaff;
-    text-transform: uppercase;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    border-radius: 4px;
+    animation: jump7456 0.5s linear infinite;
 }
 
-.loader-circle-9:before {
-    content: "";
-    position: absolute;
-    top: -3px;
-    left: -3px;
-    width: 100%;
-    height: 100%;
-    border: 3px solid transparent;
-    border-top: 3px solid #00eaff;
-    border-right: 3px solid #00eaff;
-    border-radius: 50%;
-    animation: animateC 2s linear infinite;
-}
+@keyframes jump7456 {
+    15% {
+        border-bottom-right-radius: 3px;
+    }
 
-.loader-circle-9 span {
-    display: block;
-    position: absolute;
-    top: calc(50% - 2px);
-    left: 50%;
-    width: 50%;
-    height: 4px;
-    background: transparent;
-    transform-origin: left;
-    animation: animate 2s linear infinite;
-}
+    25% {
+        transform: translateY(9px) rotate(22.5deg);
+    }
 
-.loader-circle-9 span:before {
-    content: "";
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #00eaff;
-    top: -6px;
-    right: -8px;
-    box-shadow: 0 0 20px #00eaff;
-}
+    50% {
+        transform: translateY(18px) scale(1, .9) rotate(45deg);
+        border-bottom-right-radius: 40px;
+    }
 
-@keyframes animateC {
-    0% {
-        transform: rotate(0deg);
+    75% {
+        transform: translateY(9px) rotate(67.5deg);
     }
 
     100% {
-        transform: rotate(360deg);
+        transform: translateY(0) rotate(90deg);
     }
 }
 
-@keyframes animate {
-    0% {
-        transform: rotate(45deg);
+@keyframes shadow324 {
+
+    0%,
+    100% {
+        transform: scale(1, 1);
     }
 
-    100% {
-        transform: rotate(405deg);
+    50% {
+        transform: scale(1.2, 1);
     }
 }
